--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name="com.yizhixiaomifeng.MainActivity"
             android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen">
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,13 +25,13 @@
         </activity>
         
         <activity android:name="com.yizhixiaomifeng.SettingCenter"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"></activity>
+            android:theme="@android:style/Theme.Black.NoTitleBar"></activity>
         <activity android:name="com.yizhixiaomifeng.SetHead"
-            android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"></activity>
+            android:theme="@android:style/Theme.Black.NoTitleBar"></activity>
     	<activity android:name="com.yizhixiaomifeng.Login"
-    	    android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"></activity>
+    	    android:theme="@android:style/Theme.Black.NoTitleBar"></activity>
     	<activity android:name="com.yizhixiaomifeng.Register"
-    	    android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen"></activity>
+    	    android:theme="@android:style/Theme.Black.NoTitleBar"></activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
