--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,18 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/android-async-http-1.4.6.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="libs/avoscloud-feedback-v3.4.2.zip"/>
+	<classpathentry kind="lib" path="libs/avoscloud-push-v3.4.2.jar"/>
+	<classpathentry kind="lib" path="libs/avoscloud-sdk-v3.4.2.jar"/>
+	<classpathentry kind="lib" path="libs/avoscloud-search-v3.4.2.zip"/>
+	<classpathentry kind="lib" path="libs/avoscloud-sns-v3.4.2.zip"/>
+	<classpathentry kind="lib" path="libs/avoscloud-statistics-v3.4.2.jar"/>
+	<classpathentry kind="lib" path="libs/fastjson.jar"/>
+	<classpathentry kind="lib" path="libs/httpmime-4.2.4.jar"/>
+	<classpathentry kind="lib" path="libs/Java-WebSocket-1.2.0-leancloud.jar"/>
+	<classpathentry kind="lib" path="libs/qq.sdk.1.6.1.jar"/>
+	<classpathentry kind="lib" path="libs/weibo.sdk.android.sso.3.0.1-leancloud.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
